feat: java-problems 刷题日常, 1题也很棒啦